<resources>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="app_name">TeacherAssistant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_hint">First Name</string>
    <string name="hours_block_hint">Hours block</string>
    <string name="surname_hint">Surname</string>
    <string name="id_card_number_hint">Id card number</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_students">Students</string>
    <string name="add_student_title">Add a student</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="choose_subjects_for_student">Choose subjects for student</string>
    <string name="choose_students_for_subject">Choose students for this subject</string>
    <string name="add_subject_title">Add a subject</string>
    <string name="subject_name_hint">Name</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_stats">Statistics</string>
    <string name="grade_note_hint">Note</string>
    <string name="add_grade_title">Add a grade</string>
    <string name="menu_summary">Summary</string>
    <string name="nav_header_title">Assistant to the Teacher</string>
    <string name="clear_db">Clear data</string>
    <string name="nav_stats">Statistics</string>
</resources>