<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subjects"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_subjects" />
        <item
            android:id="@+id/nav_students"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_students" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_grades" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_stats" />
    </group>
</menu>