<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.teacherassistant.ui.fragments.students.StudentsViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/student_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:text="@={viewModel.firstName}"
            tools:text="@tools:sample/first_names" />

        <EditText
            android:id="@+id/student_surname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName"
            android:text="@={viewModel.surName}"
            tools:text="@tools:sample/last_names" />

        <EditText
            android:id="@+id/student_id_card_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_card_number_hint"
            android:inputType="number"
            android:text="@={`` + viewModel.idCardNumber}"
            tools:text="@sample/idNumbers" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_subjects"/>

    </LinearLayout>
</layout>