<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_subjects">

    <fragment
        android:id="@+id/nav_students"
        android:name="com.example.teacherassistant.ui.fragments.students.StudentsFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/students_fragment" >
        <action
            android:id="@+id/action_nav_students_to_nav_grades"
            app:destination="@id/nav_grades" />
    </fragment>

    <fragment
        android:id="@+id/nav_subjects"
        android:name="com.example.teacherassistant.ui.fragments.subjects.SubjectsFragment"
        android:label="@string/menu_subjects"
        tools:layout="@layout/subjects_fragment" >
        <action
            android:id="@+id/action_nav_subjects_to_nav_grades"
            app:destination="@id/nav_grades" />
    </fragment>

    <fragment
        android:id="@+id/nav_grades"
        android:name="com.example.teacherassistant.ui.fragments.grades.GradesFragment"
        android:label="@string/menu_grades"
        tools:layout="@layout/grades_fragment" />
</navigation>